--- a/lf-tc-mmdp-report.html
+++ b/lf-tc-mmdp-report.html
@@ -629,7 +629,7 @@
    *
    */
   function populateHtmlTableHeader() {
-    // Empty cell over row names
+    // Empty cell over row names:
     $("#header-row").append(`
       <th scope="col" class="container">
         <div class="row mb-2">
