Add two TC cell definitions

--- a/lf-tc-mmdp-report.html
+++ b/lf-tc-mmdp-report.html
@@ -201,9 +201,12 @@
       ],
     },
     {
-      name: "Reduction in Trachoma burden below 1/10.000",
+      name: "Reduction in Trachoma burden below 1/1000",
       type: rowTypes.DATA,
-      cells: [null, { value: "todo" }],
+      cells: [
+        null,
+        { dn: "TCMMDP - Reduction in Trachoma burden below 1/1000" },
+      ],
     },
     {
       name:
@@ -245,10 +248,8 @@
       name: "Number of cases receiving MMDP care per IU",
       type: rowTypes.DATA,
       cells: [
-        {
-          dn: "LFMMDP - Cases receiving MMDP care per IU",
-        },
-        { value: "todo" },
+        { dn: "LFMMDP - Cases receiving MMDP care per IU" },
+        { dn: "TCMMDP - Cases receiving MMDP care per IU" },
       ],
     },
     {
