--- a/training-report.html
+++ b/training-report.html
@@ -391,8 +391,8 @@
 
   // (Ideally, initial values would be set by the reports app parameters)
   // Initial period should get overwritten by `setUpPeriodSelect()`;
-  const initialPeriod =
-    "2020;2019;2018;2017;2016;2015;2014;2013;2012;2011;2010";
+  const currentYear = new Date().getFullYear();
+  const initialPeriod = currentYear;
   const initialOrgUnit = Object.keys(dhis2.report.organisationUnit).length
     ? dhis2.report.organisationUnit.id
     : "GdH306UQ8L8"; // This is the global org-unit
@@ -410,6 +410,7 @@
     );
 
   let state = {
+    currentYear: currentYear,
     period: initialPeriod,
     orgUnit: initialOrgUnit,
     numberFormat,
@@ -946,7 +947,7 @@
    */
   function setUpPeriodCheckboxes(startingYear) {
     // Populate period checkboxes, including "all years"
-    const currentYear = new Date().getFullYear();
+    const currentYear = new state.currentYear;
 
     const allYears = [];
     for (let year = currentYear; year >= startingYear; year--) {
