--- a/mda-report.html
+++ b/mda-report.html
@@ -1802,25 +1802,9 @@
       allYears.push(year);
     }
     const allYearsString = allYears.join(";");
-    state = { ...state, period: allYearsString, allYears: allYearsString };
+    state = { ...state, allYears: allYearsString };
 
     const checkboxes = $("#periodCheckboxes");
-    checkboxes.append(`
-      <div class="form-check">
-        <input
-          class="form-check-input"
-          type="checkbox"
-          value="${allYearsString}"
-          name="period"
-          id="${allYearsString}"
-          checked
-        />
-        <label class="form-check-label" for="${allYearsString}">
-          All Years
-        </label>
-      </div>
-    `);
-
     allYears.forEach((year) => {
       checkboxes.append(`
         <div class="form-check">
@@ -1830,6 +1814,7 @@
             value="${year}"
             name="period"
             id="${year}"
+            ${year == currentYear ? "checked" : ""}
           />
           <label class="form-check-label" for="${year}">
             ${year}
@@ -1837,6 +1822,21 @@
         </div>
       `);
     });
+
+    checkboxes.append(`
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value="${allYearsString}"
+          name="period"
+          id="${allYearsString}"
+        />
+        <label class="form-check-label" for="${allYearsString}">
+          All Years
+        </label>
+      </div>
+    `);
   }
 
   function setUpOrgUnitCheckboxes(maxLevel) {
